# diffuse-encoder

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
demo/: demo.ipynb
notebooks/: tutorial_with_diffusion.ipynb
scripts/deepjuice_env/model_brain/: encoding_function.py
scripts/diffuse_encoder_env/: synthesize_images_diffusers.py
src/lib/deepjuice_env/: utility.py
src/lib/diffuse_encoder_env/: nsd.py
